--- a/src/profile/Contact Form/Contact.css
+++ b/src/profile/Contact Form/Contact.css
@@ -1,11 +1,7 @@
 .bgcontactimg{
     background-image: url('https://images.unsplash.com/photo-1620121692029-d088224ddc74?auto=format&fit=crop&q=80&w=1932&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
 }
-.bgCard{
-    
-    background-color: rgba(0, 0, 0, 0.697);
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 150px;
-    padding-right: 150px;
+.messageBox{
+    height: 100px;
+    width: 190px;
 }
